--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -566,7 +566,7 @@ global:
   # The name (and tag) of the consul-dataplane Docker image used for the
   # connect-injected sidecar proxies and mesh, terminating, and ingress gateways.
   # @default: hashicorp/consul-dataplane:<latest supported version>
-  imageConsulDataplane: "hashicorppreview/consul-dataplane:1.0-dev"
+  imageConsulDataplane: "hashicorp/consul-dataplane:1.0.0-beta4"
 
   # Configuration for running this Helm chart on the Red Hat OpenShift platform.
   # This Helm chart currently supports OpenShift v4.x+.
