--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -1143,6 +1143,9 @@ externalServers:
   # @type: array<string>
   hosts: [ ]
 
+  # The HTTP port of the Consul servers.
+  httpPort: 8500
+
   # The HTTPS port of the Consul servers.
   httpsPort: 8501
 
@@ -2845,6 +2848,8 @@ apiGateway:
   enabled: false
 
   # Image to use for the api-gateway-controller pods and gateway instances
+  #
+  # ~> **Note:** Using API Gateway <= 0.4 with external servers requires setting `client.enabled: true`.
   # @type: string
   image: null
 
