Update acl-init flags

--- a/charts/consul/templates/api-gateway-controller-deployment.yaml
+++ b/charts/consul/templates/api-gateway-controller-deployment.yaml
@@ -217,16 +217,17 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.hostIP
-          {{- if .Values.global.tls.enabled }}
-        - name: CONSUL_CACERT
-          value: /consul/tls/ca/tls.crt
-          {{- end }}
-        - name: CONSUL_HTTP_ADDR
-          {{- if .Values.global.tls.enabled }}
-          value: https://$(HOST_IP):8501
-          {{- else }}
-          value: http://$(HOST_IP):8500
-          {{- end }}
+        - name: NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
+        {{- include "consul.consulK8sConsulServerEnvVars" . | nindent 8 }}
+        - name: CONSUL_LOGIN_META  
+          value: "component=api-gateway-controller,pod=$(NAMESPACE)/$(POD_NAME)"
         image: {{ .Values.global.imageK8S }}
         volumeMounts:
         - mountPath: /consul/login
@@ -246,17 +247,16 @@ spec:
         - "-ec"
         - |
           consul-k8s-control-plane acl-init \
-            -component-name=api-gateway-controller \
             {{- if and .Values.global.federation.enabled .Values.global.federation.primaryDatacenter }}
-            -acl-auth-method={{ template "consul.fullname" . }}-k8s-component-auth-method-{{ .Values.global.datacenter }} \
-            -primary-datacenter={{ .Values.global.federation.primaryDatacenter }} \
+            -auth-method-name={{ template "consul.fullname" . }}-k8s-component-auth-method-{{ .Values.global.datacenter }} \
+            -datacenter={{ .Values.global.federation.primaryDatacenter }} \
             {{- else }}
-            -acl-auth-method={{ template "consul.fullname" . }}-k8s-component-auth-method \
+            -auth-method-name={{ template "consul.fullname" . }}-k8s-component-auth-method \
             {{- end }}
             {{- if .Values.global.adminPartitions.enabled }}
             -partition={{ .Values.global.adminPartitions.name }} \
             {{- end }}
-            -consul-api-timeout={{ .Values.global.consulAPITimeout }} \
+            -api-timeout={{ .Values.global.consulAPITimeout }} \
             -log-level={{ default .Values.global.logLevel .Values.apiGateway.logLevel }} \
             -log-json={{ .Values.global.logJSON }}
         resources:
