--- a/charts/consul/templates/client-daemonset.yaml
+++ b/charts/consul/templates/client-daemonset.yaml
@@ -336,7 +336,11 @@ spec:
                 {{- end }}
                 {{- end }}
                 {{- if .Values.client.grpc }}
-                -hcl='ports { grpc = 8502 }' \
+                {{- if .Values.global.tls.enabled }}
+                -hcl='ports { grpc = -1, grpc_tls = 8502 }' \
+                {{- else }}
+                -hcl='ports { grpc = 8502, grpc_tls = -1 }' \
+                {{- end }}
                 {{- end }}
                 {{- if (and .Values.global.metrics.enabled .Values.global.metrics.enableAgentMetrics) }}
                 -hcl='telemetry { prometheus_retention_time = "{{ .Values.global.metrics.agentMetricsRetentionTime }}" }' \
