--- a/charts/consul/templates/connect-inject-deployment.yaml
+++ b/charts/consul/templates/connect-inject-deployment.yaml
@@ -284,7 +284,7 @@ spec:
               mountPath: /etc/connect-injector/certs
               readOnly: true
           {{- end }}
-          {{- if and .Values.global.tls.enabled (not (and .Values.externalServers.enabled .Values.externalServers.useSystemRoots))}}
+          {{- if and .Values.global.tls.enabled (not (or (and .Values.externalServers.enabled .Values.externalServers.useSystemRoots) .Values.global.secretsBackend.vault.enabled))}}
             - name: consul-ca-cert
               mountPath: /consul/tls/ca
               readOnly: true
@@ -301,17 +301,17 @@ spec:
             secretName: {{ template "consul.fullname" . }}-connect-inject-webhook-cert
       {{- end }}
       {{- if .Values.global.tls.enabled }}
-      {{- if not (and .Values.externalServers.enabled .Values.externalServers.useSystemRoots) }}
+      {{- if not (or (and .Values.externalServers.enabled .Values.externalServers.useSystemRoots) .Values.global.secretsBackend.vault.enabled) }}
         - name: consul-ca-cert
           secret:
-          {{- if .Values.global.tls.caCert.secretName }}
-            secretName: {{ .Values.global.tls.caCert.secretName }}
-          {{- else }}
-            secretName: {{ template "consul.fullname" . }}-ca-cert
-          {{- end }}
-            items:
-              - key: {{ default "tls.crt" .Values.global.tls.caCert.secretKey }}
-                path: tls.crt
+            {{- if .Values.global.tls.caCert.secretName }}
+              secretName: {{ .Values.global.tls.caCert.secretName }}
+            {{- else }}
+              secretName: {{ template "consul.fullname" . }}-ca-cert
+            {{- end }}
+              items:
+                - key: {{ default "tls.crt" .Values.global.tls.caCert.secretKey }}
+                  path: tls.crt
       {{- end }}
       {{- end }}
       {{- if .Values.connectInject.priorityClassName }}
