--- a/charts/consul/templates/mesh-gateway-deployment.yaml
+++ b/charts/consul/templates/mesh-gateway-deployment.yaml
@@ -93,7 +93,7 @@ spec:
         emptyDir:
           medium: "Memory"
       {{- if .Values.global.tls.enabled }}
-      {{- if not (and .Values.externalServers.enabled .Values.externalServers.useSystemRoots) }}
+      {{- if not (or (and .Values.externalServers.enabled .Values.externalServers.useSystemRoots) .Values.global.secretsBackend.vault.enabled) }}
       - name: consul-ca-cert
         secret:
           {{- if .Values.global.tls.caCert.secretName }}
@@ -124,6 +124,10 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
         {{- include "consul.consulK8sConsulServerEnvVars" . | nindent 8 }}
         {{- if .Values.global.acls.manageSystemACLs }}
         - name: CONSUL_LOGIN_AUTH_METHOD
@@ -142,9 +146,7 @@ spec:
           value: "component=mesh-gateway,pod=$(NAMESPACE)/$(POD_NAME)"
         {{- end }}
         - name: CONSUL_NODE_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: spec.nodeName
+          value: $(NODE_NAME)-virtual
         command:
         - "/bin/sh"
         - "-ec"
@@ -158,10 +160,12 @@ spec:
         volumeMounts:
         - name: consul-service
           mountPath: /consul/service
-        {{- if and .Values.global.tls.enabled (not (and .Values.externalServers.enabled .Values.externalServers.useSystemRoots)) }}
+        {{- if .Values.global.tls.enabled }}
+        {{- if not (or (and .Values.externalServers.enabled .Values.externalServers.useSystemRoots) .Values.global.secretsBackend.vault.enabled) }}
         - name: consul-ca-cert
           mountPath: /consul/tls/ca
           readOnly: true
+        {{- end }}
         {{- end }}
         {{- if .Values.meshGateway.initServiceInitContainer.resources }}
         resources: {{ toYaml .Values.meshGateway.initServiceInitContainer.resources | nindent 10 }}
@@ -181,10 +185,12 @@ spec:
         - mountPath: /consul/service
           name: consul-service
           readOnly: true
+        {{- if .Values.global.tls.enabled }}
         {{- if and .Values.global.tls.enabled (not (and .Values.externalServers.enabled .Values.externalServers.useSystemRoots)) }}
         - name: consul-ca-cert
           mountPath: /consul/tls/ca
           readOnly: true
+        {{- end }}
         {{- end }}
         env:
         - name: NAMESPACE
@@ -195,14 +201,16 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
         - name: DP_CREDENTIAL_LOGIN_META1
           value: pod=$(NAMESPACE)/$(POD_NAME)
         - name: DP_CREDENTIAL_LOGIN_META2
           value: component=mesh-gateway
         - name: DP_SERVICE_NODE_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: spec.nodeName
+          value: $(NODE_NAME)-virtual
         command:
         - consul-dataplane
         args:
@@ -219,7 +227,11 @@ spec:
         - -proxy-service-id-path=/consul/service/proxy-id
         {{- if .Values.global.tls.enabled }}
         {{- if (not (and .Values.externalServers.enabled .Values.externalServers.useSystemRoots)) }}
+        {{- if .Values.global.secretsBackend.vault.enabled }}
+        - -ca-certs=/vault/secrets/serverca.crt
+        {{- else }}
         - -ca-certs=/consul/tls/ca/tls.crt
+        {{- end }}
         {{- end }}
         {{- if and .Values.externalServers.enabled .Values.externalServers.tlsServerName }}
         - -tls-server-name={{.Values.externalServers.tlsServerName }}
