--- a/control-plane/Dockerfile
+++ b/control-plane/Dockerfile
@@ -111,7 +111,7 @@ CMD /bin/${BIN_NAME}
 # We don't rebuild the software because we want the exact checksums and
 # binary signatures to match the software and our builds aren't fully
 # reproducible currently.
-FROM registry.access.redhat.com/ubi8/ubi-minimal:8.6 as ubi
+FROM registry.access.redhat.com/ubi9-minimal:9.1.0 as ubi
 
 ARG PRODUCT_NAME
 ARG PRODUCT_VERSION
