Fix issues found in the nightly tests (#1735)
- use ubuntu based image for static-client in acceptance tests because alpine images are known to be flakey with DNS on kubernetes: https://stackoverflow.com/questions/65181012/does-alpine-have-known-dns-issue-within-kubernetes
- Fix ACL permissions for the connect injector to make wan federations tests pass. Previously, injector only needed the global auth method when namespaces are enabled. Now that we've joined it with the controller, it needs global auth method in the secondary all the time.
- Fix debug info from envoy (previously we were assuming there's consul-sidecar). This change also adds debugging info to all pods that use envoy.

Co-authored-by: Nitya Dhanushkodi <nitya@hashicorp.com>
Co-authored-by: Ashwin Venkatesh <ashwin.what@gmail.com>

--- a/acceptance/tests/fixtures/bases/static-client/deployment.yaml
+++ b/acceptance/tests/fixtures/bases/static-client/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: static-client
-          image: docker.mirror.hashicorp.services/curlimages/curl:latest
+          image: docker.mirror.hashicorp.services/buildpack-deps:jammy-curl
           command: [ "/bin/sh", "-c", "--" ]
           args: [ "while true; do sleep 30; done;" ]
           env:
