Add support for setting the namespace that the CNI plugin is installed (#1756)
* Add support for setting the namespace that the CNI plugin is installed into

--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -1920,6 +1920,11 @@ connectInject:
     # @type: string
     logLevel: null
 
+    # Set the namespace to install the CNI plugin into. Overrides global namespace settings for CNI resources.
+    # Ex: "kube-system" 
+    # @type: string
+    namespace: null
+
     # Location on the kubernetes node where the CNI plugin is installed. Shoud be the absolute path and start with a '/'
     # Example on GKE:
     #
